syntax = "proto3";

// go get -u google.golang.org/grpc
// go get -u google.golang.org/protobuf
// go get -u google.golang.org/protobuf/cmd/protoc-gen-go
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// sudo apt install protobuf-compiler

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

option go_package = "/internal/microservice/album/proto";

package proto;

service AlbumService {
  rpc SearchAlbum(SearchAlbumRequest) returns (SearchAlbumResponse) {}
  rpc ViewAlbum(ViewAlbumRequest) returns (ViewAlbumResponse) {}
  rpc GetAllAlbums(GetAllAlbumsRequest) returns (GetAllAlbumsResponse) {}
  rpc GetAllAlbumsByArtistID(GetAllAlbumsByArtistIDRequest) returns (GetAllAlbumsByArtistIDResponse) {}
}

message SearchAlbumRequest {
  string query = 1;
}

message SearchAlbumResponse {
  repeated Album albums = 1;
}

message ViewAlbumRequest {
  uint64 id = 1;
}

message ViewAlbumResponse {
  Album album = 1;
}

message GetAllAlbumsRequest {}

message GetAllAlbumsResponse {
  repeated Album albums = 1;
}

message GetAllAlbumsByArtistIDRequest {
  uint64 artist_id = 1;
}

message GetAllAlbumsByArtistIDResponse {
  repeated Album albums = 1;
}

message Album {
  uint64 id = 1;
  string name = 2;
  string artist = 3;
  string genre = 4;
  uint32 release_year = 5;
  string cover_image_url = 6;
}
